[package]
name = "pavlok-oauth"
version = "0.1.7"
edition = "2021"
repository = "https://github.com/rustafarian-dev/pavlok-oauth-rs"
description = "A library for Pavlok OAuth."
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.92"
url = "2.3.1"
